--- a/app/src/main/res/layout/queue_item_template.xml
+++ b/app/src/main/res/layout/queue_item_template.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:background="#194A9F">
+    android:layout_height="wrap_content"
+    android:background="#194A9F"
+    android:padding="30dp">
 
     <TextView
         android:id="@+id/queue_label"
